[BUGFIX] Correct overlapping elements on centered image - fixes #113, #159

--- a/Resources/Private/Less/Theme/image.less
+++ b/Resources/Private/Less/Theme/image.less
@@ -37,6 +37,7 @@
 	}
 }
 .image-wrap {
+	overflow: hidden;
 	max-width: 100%;
 }
 .image-below {
